--- a/res/css/style.css
+++ b/res/css/style.css
@@ -79,7 +79,6 @@ nav a:hover{
 }
 
 .textoverimg{
-    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,15 +86,19 @@ nav a:hover{
 .textoverlay{
     display:flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     text-align: center;
-    padding:80px 200px;
+    /*padding:80px 200px;*/
+    height: 50%;
+    width:60%;
     color: #fff; /* Text color */
     background-color: rgba(51, 51, 51, 0.7);
   }
 
   .textoverlay h1,.textoverlay h4{
-    padding-bottom: 10px;
+    padding: 20px;
   }
 
   .textoverlay p{
@@ -123,4 +126,53 @@ nav a:hover{
 
  /* SLIDES */
 
+ .team{
+    width:60%;
+    margin:auto;
+ }
+ .mySlides {display:none;}
+
+ .slide_content{
+    display:flex;
+    justify-content:space-around;
+    align-items: center;
+ }
+
+ .slide_content img{
+    width:30%;
+ }
+
+ /* FOOTER */
+ footer{
+    display:flex;
+    flex-direction: column;
+ }
+
+ .footer_content{
+    display:flex;
+    justify-content: space-evenly;
+    text-align: center;
+    align-items: center;
+    padding:20px;
+    background-color: rgb(240, 240, 240);
+ }
+
+ .footer_content h3{
+    padding-bottom:10px;
+ }
  
+ .footer_content i{
+    padding:10px;
+    color:rgb(62, 62, 62);
+ }
+
+ .footer_content i:hover{
+    color:black;
+ }
+
+ .copyright{
+    text-align: center;
+    padding:10px;
+    color:white;
+    background-color: rgb(36, 36, 36);
+ }
